# menote

./: .editorconfig  .gitignore  AGENTS.md  README.md  biome.json  package.json  svelte.config.js  vite.config.js
.storybook/: main.ts  preview.ts
.zed/: settings.json
docs/: CHANGELOG.md  PLAN.md  architecture.md  build-desktop.md  dev-guide.md  models.md
docs/DEV_HANDBOOK/: making_storeis.md
docs/zero-sync/: 01-overview.md  02-requirements.md  03-preparation.md  04-caveats.md  05-alternatives.md  06-limitations.md  07-quick-reference.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/: notes.sql  users.sql
src-tauri/migrations/2026-03-29-095053-0000_create_users_table/: up.sql
src-tauri/migrations/2026-04-03-032629-0000_create_notes_table/: up.sql
src-tauri/migrations/2026-04-06-125246-0000_add_user_fk_in_notes/: down.sql  up.sql
src-tauri/src/: db.rs  dto.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/commands/: notes.rs  users.rs
src-tauri/src/error/: mod.rs
src-tauri/src/models/: notes.rs  users.rs
src-tauri/src/ui/stitch/clean_dashboard_with_spotlight/: code.html
src-tauri/src/ui/stitch/focused_ai_editor/: code.html
src-tauri/src/ui/stitch/obsidian_gold/: DESIGN.md
src-tauri/src/ui/stitch/simple_user_login/: code.html
src/lib/commands/: index.ts
src/lib/components/: Button.stories.svelte  Button.svelte  Card.stories.svelte  Card.svelte  ConfirmModal.stories.svelte  ConfirmModal.svelte  Header.stories.svelte  (+11 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
(+22 files in other folders)
