[package]
name = "menote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "menote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "12.0.1"
diesel = { version =  "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
dotenv = "0.15"
specta = { version = "2.0.0-rc.24", features = [] }
tauri-specta = { version = "2.0.0-rc.24", features = ["javascript", "typescript"] }
